Update navigation links to use HTML files

--- a/Index.html
+++ b/Index.html
@@ -479,18 +479,18 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="<?= ScriptApp.getService().getUrl() ?>" class="logo" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 10px;">
+            <a href="index.html" class="logo" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 10px;">
                 <div class="logo-icon">S</div>
                 Sirius Usa LLC
             </a>
             <ul class="nav-menu">
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>">Inicio</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=amazon">Amazon</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=ebay">eBay</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=procesos">Procesos</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=prepcenters">Prep Centers</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=contacto">Contacto</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=nosotros">Nosotros</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="amazon.html">Amazon</a></li>
+                <li><a href="ebay.html">eBay</a></li>
+                <li><a href="procesos.html">Procesos</a></li>
+                <li><a href="prepcenters.html">Prep Centers</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
             </ul>
         </div>
     </nav>
@@ -500,7 +500,7 @@
         <div class="container">
             <h1>Expertos en Amazon & eBay</h1>
             <p>Soluciones completas de ecommerce para Amazon FBM/FBA y eBay Dropshipping. Optimizamos tu cadena de suministro y maximizamos tu rentabilidad.</p>
-            <a href="#contact" class="cta-button">Comenzar Partnership</a>
+            <a href="contacto.html" class="cta-button">Comenzar Partnership</a>
         </div>
     </div>
 
@@ -606,7 +606,7 @@
             <p>
                 Contáctanos para una consulta estratégica y descubre cómo podemos optimizar tus operaciones en Amazon y eBay. Trabajemos juntos para escalar tu negocio.
             </p>
-            <a href="#contact" class="cta-button">Contactar Ahora</a>
+            <a href="contacto.html" class="cta-button">Contactar Ahora</a>
         </div>
     </div>
 
