Update navigation menu active states

--- a/procesos.html
+++ b/procesos.html
@@ -363,11 +363,11 @@
                 <div class="logo-icon">S</div>
                 Sirius Usa LLC
             </a>
-            <ul class="nav-menu">
+           <ul class="nav-menu">
                 <li><a href="<?= ScriptApp.getService().getUrl() ?>">Inicio</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=amazon">Amazon</a></li>
+                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=amazon" class="active">Amazon</a></li>
                 <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=ebay">eBay</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=procesos" class="active">Procesos</a></li>
+                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=procesos">Procesos</a></li>
                 <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=prepcenters">Prep Centers</a></li>
                 <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=contacto">Contacto</a></li>
             </ul>
