--- a/amazon.html
+++ b/amazon.html
@@ -334,12 +334,13 @@
                 Sirius Usa LLC
             </a>
             <ul class="nav-menu">
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>">Inicio</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=amazon" class="active">Amazon</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=ebay">eBay</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=procesos">Procesos</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=prepcenters">Prep Centers</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=contacto">Contacto</a></li>
+                <a href="index.html">Inicio</a>
+                <a href="amazon.html" class="active">Amazon</a>
+                <a href="ebay.html">eBay</a>
+                <a href="procesos.html">Procesos</a>
+                <a href="prepcenters.html">Prep Centers</a>
+                <a href="contacto.html">Contacto</a>
+                <a href="nosotros.html">Nosotros</a>
             </ul>
         </div>
     </nav>
