Refactor navigation links to list items

--- a/amazon.html
+++ b/amazon.html
@@ -327,20 +327,21 @@
 </head>
 <body>
     <!-- Navigation -->
+   <!-- Navigation CORREGIDA -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="<?= ScriptApp.getService().getUrl() ?>" class="logo">
+            <a href="index.html" class="logo">
                 <div class="logo-icon">S</div>
                 Sirius Usa LLC
             </a>
             <ul class="nav-menu">
-                <a href="index.html">Inicio</a>
-                <a href="amazon.html" class="active">Amazon</a>
-                <a href="ebay.html">eBay</a>
-                <a href="procesos.html">Procesos</a>
-                <a href="prepcenters.html">Prep Centers</a>
-                <a href="contacto.html">Contacto</a>
-                <a href="nosotros.html">Nosotros</a>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="amazon.html" class="active">Amazon</a></li>
+                <li><a href="ebay.html">eBay</a></li>
+                <li><a href="procesos.html">Procesos</a></li>
+                <li><a href="prepcenters.html">Prep Centers</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
             </ul>
         </div>
     </nav>
