--- a/contacto.html
+++ b/contacto.html
@@ -489,7 +489,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Navigation CORREGIDA -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo">
@@ -497,12 +497,13 @@
                 Sirius Usa LLC
             </a>
             <ul class="nav-menu">
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>">Inicio</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=amazon" class="active">Amazon</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=ebay">eBay</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=procesos">Procesos</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=prepcenters">Prep Centers</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=contacto">Contacto</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="amazon.html">Amazon</a></li>
+                <li><a href="ebay.html">eBay</a></li>
+                <li><a href="procesos.html">Procesos</a></li>
+                <li><a href="prepcenters.html">Prep Centers</a></li>
+                <li><a href="contacto.html" class="active">Contacto</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
             </ul>
         </div>
     </nav>
