--- a/prepcenters.html
+++ b/prepcenters.html
@@ -372,24 +372,24 @@
     </style>
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="<?= ScriptApp.getService().getUrl() ?>" class="logo">
-                <div class="logo-icon">S</div>
-                Sirius Usa LLC
-            </a>
-            <ul class="nav-menu">
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>">Inicio</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=amazon" class="active">Amazon</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=ebay">eBay</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=procesos">Procesos</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=prepcenters">Prep Centers</a></li>
-                <li><a href="<?= ScriptApp.getService().getUrl() ?>?page=contacto">Contacto</a></li>
-            </ul>
-        </div>
-    </nav>
-
+    <!-- Navigation CORREGIDA -->
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="logo">
+                    <div class="logo-icon">S</div>
+                    Sirius Usa LLC
+                </a>
+                <ul class="nav-menu">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="amazon.html">Amazon</a></li>
+                    <li><a href="ebay.html">eBay</a></li>
+                    <li><a href="procesos.html">Procesos</a></li>
+                    <li><a href="prepcenters.html" class="active">Prep Centers</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                </ul>
+            </div>
+        </nav>
     <!-- Partnership Header -->
     <div class="partnership-header">
         <div class="container">
