Update website content for dropshipping services

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sirius Usa LLC - Amazon & eBay Experts</title>
+    <title>Sirius Usa LLC - Dropshipping Estratégico con Prep Centers</title>
     <style>
         /* Reset y configuración para Google Apps Script */
         html, body {
@@ -498,9 +498,9 @@
     <!-- Header Hero -->
     <div class="header" id="home">
         <div class="container">
-            <h1>Expertos en Amazon & eBay</h1>
-            <p>Soluciones completas de ecommerce para Amazon FBM/FBA y eBay Dropshipping. Optimizamos tu cadena de suministro y maximizamos tu rentabilidad.</p>
-            <a href="contacto.html" class="cta-button">Comenzar Partnership</a>
+            <h1>Dropshipping Estratégico con Prep Centers</h1>
+            <p>Publicamos en Amazon y eBay, gestionamos proveedores globales y coordinamos prep centers para un fulfillment impecable y maximización de márgenes.</p>
+            <a href="contacto.html" class="cta-button">Comenzar Asociación</a>
         </div>
     </div>
 
@@ -512,34 +512,32 @@
                 <!-- Amazon Card -->
                 <div class="platform-card amazon-card" id="amazon">
                     <div class="platform-icon">
-                        <!-- Logo oficial de Amazon -->
                         <img class="logo-img" src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon Logo" onerror="this.style.display='none'">
                     </div>
-                    <h3>Servicios Amazon</h3>
+                    <h3>Dropshipping Amazon FBM</h3>
                     <ul class="service-list">
-                        <li>Amazon FBM (Fulfillment by Merchant)</li>
-                        <li>Amazon FBA (Fulfillment by Amazon)</li>
-                        <li>Amazon Wholesale & Private Label</li>
-                        <li>PPC Optimization & Account Management</li>
-                        <li>Product Research & Listing Optimization</li>
-                        <li>Inventory Management & Analytics</li>
+                        <li>Dropshipping profesional en Amazon FBM</li>
+                        <li>Cumplimiento de políticas de empaque Amazon</li>
+                        <li>Gestión de proveedores verificados</li>
+                        <li>Análisis de márgenes optimizado</li>
+                        <li>Optimización de listings y precios</li>
+                        <li>Gestión de inventario en tiempo real</li>
                     </ul>
                 </div>
                 
                 <!-- eBay Card -->
                 <div class="platform-card ebay-card" id="ebay">
                     <div class="platform-icon">
-                        <!-- Logo oficial de eBay -->
                         <img class="logo-img" src="https://upload.wikimedia.org/wikipedia/commons/1/1b/EBay_logo.svg" alt="eBay Logo" onerror="this.style.display='none'">
                     </div>
-                    <h3>Servicios eBay</h3>
+                    <h3>Dropshipping eBay</h3>
                     <ul class="service-list">
-                        <li>eBay Dropshipping & Wholesale</li>
-                        <li>International Shipping Solutions</li>
-                        <li>eBay Store Management</li>
-                        <li>Listing Optimization & SEO</li>
-                        <li>Multi-account Management</li>
-                        <li>Customer Service & Returns</li>
+                        <li>Dropshipping multi-cuenta seguro</li>
+                        <li>Soluciones de envío internacional</li>
+                        <li>Cumplimiento de normativas eBay</li>
+                        <li>Gestión de reputación y feedback</li>
+                        <li>Optimización SEO para listings</li>
+                        <li>Atención al cliente especializada</li>
                     </ul>
                 </div>
             </div>
@@ -551,8 +549,8 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-item">
-                    <h3>50+</h3>
-                    <p>Productos Activos</p>
+                    <h3>500+</h3>
+                    <p>Productos Analizados</p>
                 </div>
                 <div class="stat-item">
                     <h3>2+</h3>
@@ -564,7 +562,7 @@
                 </div>
                 <div class="stat-item">
                     <h3>24/7</h3>
-                    <p>Soporte Operativo</p>
+                    <p>Monitoreo Operativo</p>
                 </div>
             </div>
         </div>
@@ -577,23 +575,23 @@
             <div class="process-steps">
                 <div class="process-step">
                     <div class="step-number">1</div>
-                    <h3>Product Research</h3>
-                    <p>Identificamos productos de alta demanda y margen en Amazon y eBay usando herramientas avanzadas de análisis de mercado.</p>
+                    <h3>Análisis y Selección</h3>
+                    <p>Identificamos productos con mejor margen usando análisis de datos avanzado y herramientas de mercado.</p>
                 </div>
                 <div class="process-step">
                     <div class="step-number">2</div>
-                    <h3>Sourcing</h3>
-                    <p>Conectamos con proveedores confiables y verificamos calidad mediante estrictos controles de inspección.</p>
+                    <h3>Publicación en Marketplaces</h3>
+                    <p>Listamos productos en Amazon, eBay y otras plataformas con optimización SEO y estrategias de pricing.</p>
                 </div>
                 <div class="process-step">
                     <div class="step-number">3</div>
-                    <h3>Prep Center</h3>
-                    <p>Coordinamos con prep centers para inspección y re-packaging cumpliendo políticas de Amazon y eBay.</p>
+                    <h3>Gestión de Proveedores</h3>
+                    <p>Conectamos con distribuidores globales confiables al mejor precio disponible en el mercado.</p>
                 </div>
                 <div class="process-step">
                     <div class="step-number">4</div>
-                    <h3>Fulfillment</h3>
-                    <p>Gestionamos envíos FBM o coordinamos FBA según plataforma, optimizando costos y tiempos de entrega.</p>
+                    <h3>Coordinación Prep Centers</h3>
+                    <p>Gestionamos inspección, re-empaque y envío final al cliente cumpliendo todas las políticas.</p>
                 </div>
             </div>
         </div>
@@ -602,9 +600,9 @@
     <!-- Contact Preview -->
     <div class="contact-preview" id="contact">
         <div class="container">
-            <h2 class="section-title">¿Listo para Crecer?</h2>
+            <h2 class="section-title">¿Listo para Escalar tu Dropshipping?</h2>
             <p>
-                Contáctanos para una consulta estratégica y descubre cómo podemos optimizar tus operaciones en Amazon y eBay. Trabajemos juntos para escalar tu negocio.
+                Contáctanos para una consulta estratégica y descubre cómo nuestro sistema integrado con prep centers puede optimizar y hacer crecer tu operación de ecommerce.
             </p>
             <a href="contacto.html" class="cta-button">Contactar Ahora</a>
         </div>
@@ -614,7 +612,7 @@
     <div class="footer">
         <div class="container">
             <p>&copy; 2024 Sirius Usa LLC. Todos los derechos reservados.</p>
-            <p>Amazon & eBay Ecommerce Experts</p>
+            <p>Dropshipping Estratégico con Prep Centers</p>
             <div class="contact-info">
                 Andres E Ventura | insiriusworld@gmail.com
             </div>
@@ -664,7 +662,6 @@
             const logos = document.querySelectorAll('.logo-img');
             logos.forEach(logo => {
                 logo.addEventListener('error', function() {
-                    // Si el logo no carga, mostrar texto alternativo
                     const platformCard = this.closest('.platform-card');
                     const platformName = platformCard.classList.contains('amazon-card') ? 'AMAZON' : 'EBAY';
                     this.outerHTML = `<div style="font-size: 2em; font-weight: bold; color: ${platformCard.classList.contains('amazon-card') ? '#ff9900' : '#0064d2'}">${platformName}</div>`;
